--- a/project/src/main/resources/templates/introduzir_pessoas.html
+++ b/project/src/main/resources/templates/introduzir_pessoas.html
@@ -6,7 +6,7 @@
           <div class="card-header">Introduzir Utilizadores</div>
 
           <div class="card-body">
-            <form action="/registar" method="post">
+            <form action="/registar" method="post" enctype="multipart/form-data">
 
               <div class="form-group">
                 <label>Nome:</label>
@@ -35,6 +35,10 @@
                   <option value="0">Admistrador</option>
                   <option value="1">Dono</option>
                 </select>
+              </div>
+              <div class="form-group">
+              <label for="exampleInputFile">Explorar...</label>
+              <input class="form-control-file" aria-describedby="fileHelp" type="file" name="files" multiple required>
               </div>
               <button type="submit" class="btn btn-primary">Adicionar</button>
             </form>
