foto default feito

--- a/project/src/main/resources/templates/introduzir_rest.html
+++ b/project/src/main/resources/templates/introduzir_rest.html
@@ -46,9 +46,52 @@
             </div>
             <br>
             <div class="form-group">
-                <div class="input-group-prepend">
+              <label for="exampleInputEmail1">Dias funcionais:</label>
+              <div class="input-group-prepend">
               <input type="checkbox" aria-label="Checkbox for following text input">
-              <input value="Monday" class="form-control" aria-label="Text input with checkbox" disabled>
+              <input value="Monday" name="dia_semana" class="form-control" aria-label="Text input with checkbox" disabled>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <div class="input-group-prepend">
+                <input type="checkbox" aria-label="Checkbox for following text input">
+                <input value="Tuesday" name="dia_semana" class="form-control" aria-label="Text input with checkbox" disabled>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <div class="input-group-prepend">
+                <input type="checkbox" aria-label="Checkbox for following text input">
+                <input value="Wednesday" name="dia_semana" class="form-control" aria-label="Text input with checkbox" disabled>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <div class="input-group-prepend">
+                <input type="checkbox" aria-label="Checkbox for following text input">
+                <input value="Thursday" name="dia_semana" class="form-control" aria-label="Text input with checkbox" disabled>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <div class="input-group-prepend">
+                <input type="checkbox" aria-label="Checkbox for following text input">
+                <input value="Friday" name="dia_semana" class="form-control" aria-label="Text input with checkbox" disabled>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <div class="input-group-prepend">
+                <input type="checkbox" aria-label="Checkbox for following text input">
+                <input value="Saturday" name="dia_semana" class="form-control" aria-label="Text input with checkbox" disabled>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <div class="input-group-prepend">
+                <input type="checkbox" aria-label="Checkbox for following text input">
+                <input value="Sunday" name="dia_semana" class="form-control" aria-label="Text input with checkbox" disabled>
               </div>
             </div>
 
