--- a/project/src/main/resources/templates/main.html
+++ b/project/src/main/resources/templates/main.html
@@ -312,7 +312,7 @@
                                             <div class="info clearfix">
                                                 <div class="image">
                                                     <a href="#">
-                                                        <img th:src="${session.user.foto}" alt="John Doe" />
+                                                        <img th:src="${session.user.foto}"/>
                                                     </a>
                                                 </div>
                                                 <div class="content">
