--- a/project/src/main/resources/templates/introduzir_pessoas.html
+++ b/project/src/main/resources/templates/introduzir_pessoas.html
@@ -38,7 +38,7 @@
               </div>
               <div class="form-group">
               <label for="exampleInputFile">Explorar...</label>
-              <input class="form-control-file" aria-describedby="fileHelp" type="file" name="files" multiple required>
+              <input class="form-control-file" aria-describedby="fileHelp" type="file" name="files" multiple>
               </div>
               <button type="submit" class="btn btn-primary">Adicionar</button>
             </form>
