values bom dos dias de semana

--- a/project/src/main/resources/templates/introduzir_rest.html
+++ b/project/src/main/resources/templates/introduzir_rest.html
@@ -20,7 +20,7 @@
               <label for="exampleInputEmail1">Latitude:</label>
               <input class="form-control" placeholder="4879090877" name="latitude" type="number" required>
             </div>
-            <input type="hidden" name="dia1" value="0" id="tipo">
+            <input type="hidden" name="dia1" value="Monday" id="tipo">
           <!--  <input type="time" id="appt" name="appt"
             min="9:00" max="18:00" required>-->
             <div class="form-group">
@@ -33,7 +33,7 @@
                 <option value="Fast-Food">Fast-Food</option>
               </select>
             </div>
-            <div class="form-inline      ">
+            <div class="form-inline">
               <div class="form-group">
                 <label for="email">Abertura:</label>
                 <input type="time" class="form-control" id="email">
