dias semana value

--- a/project/src/main/resources/templates/introduzir_rest.html
+++ b/project/src/main/resources/templates/introduzir_rest.html
@@ -20,6 +20,7 @@
               <label for="exampleInputEmail1">Latitude:</label>
               <input class="form-control" placeholder="4879090877" name="latitude" type="number" required>
             </div>
+            <input type="hidden" name="dia1" value="0" id="tipo">
           <!--  <input type="time" id="appt" name="appt"
             min="9:00" max="18:00" required>-->
             <div class="form-group">
@@ -32,7 +33,7 @@
                 <option value="Fast-Food">Fast-Food</option>
               </select>
             </div>
-            <div class="form-inline">
+            <div class="form-inline      ">
               <div class="form-group">
                 <label for="email">Abertura:</label>
                 <input type="time" class="form-control" id="email">
@@ -48,50 +49,50 @@
             <div class="form-group">
               <label for="exampleInputEmail1">Dias funcionais:</label>
               <div class="input-group-prepend">
-              <input type="checkbox" aria-label="Checkbox for following text input">
-              <input value="Monday" name="dia_semana" class="form-control" aria-label="Text input with checkbox" disabled>
+              <input type="checkbox" id="Monday" value="Monday" aria-label="Checkbox for following text input">
+              <input value="Monday" name="dias" class="form-control" aria-label="Text input with checkbox" disabled>
               </div>
             </div>
 
             <div class="form-group">
               <div class="input-group-prepend">
-                <input type="checkbox" aria-label="Checkbox for following text input">
-                <input value="Tuesday" name="dia_semana" class="form-control" aria-label="Text input with checkbox" disabled>
+                <input type="checkbox" id="Tuesday" aria-label="Checkbox for following text input">
+                <input value="Tuesday" name="dias" class="form-control" aria-label="Text input with checkbox" disabled>
               </div>
             </div>
 
             <div class="form-group">
               <div class="input-group-prepend">
-                <input type="checkbox" aria-label="Checkbox for following text input">
-                <input value="Wednesday" name="dia_semana" class="form-control" aria-label="Text input with checkbox" disabled>
+                <input type="checkbox" id="Wednesday" aria-label="Checkbox for following text input">
+                <input value="Wednesday" name="dias" class="form-control" aria-label="Text input with checkbox" disabled>
               </div>
             </div>
 
             <div class="form-group">
               <div class="input-group-prepend">
-                <input type="checkbox" aria-label="Checkbox for following text input">
-                <input value="Thursday" name="dia_semana" class="form-control" aria-label="Text input with checkbox" disabled>
+                <input type="checkbox" id="Thursday" aria-label="Checkbox for following text input">
+                <input value="Thursday" name="Thursday" class="form-control" aria-label="Text input with checkbox" disabled>
               </div>
             </div>
 
             <div class="form-group">
               <div class="input-group-prepend">
-                <input type="checkbox" aria-label="Checkbox for following text input">
-                <input value="Friday" name="dia_semana" class="form-control" aria-label="Text input with checkbox" disabled>
+                <input type="checkbox" id="Friday" aria-label="Checkbox for following text input">
+                <input value="Friday" name="Friday" class="form-control" aria-label="Text input with checkbox" disabled>
               </div>
             </div>
 
             <div class="form-group">
               <div class="input-group-prepend">
-                <input type="checkbox" aria-label="Checkbox for following text input">
-                <input value="Saturday" name="dia_semana" class="form-control" aria-label="Text input with checkbox" disabled>
+                <input type="checkbox" id="Saturday" aria-label="Checkbox for following text input">
+                <input value="Saturday" name="Saturday" class="form-control" aria-label="Text input with checkbox" disabled>
               </div>
             </div>
 
             <div class="form-group">
               <div class="input-group-prepend">
-                <input type="checkbox" aria-label="Checkbox for following text input">
-                <input value="Sunday" name="dia_semana" class="form-control" aria-label="Text input with checkbox" disabled>
+                <input type="checkbox" id="Sunday" aria-label="Checkbox for following text input">
+                <input value="Sunday" name="Sunday" class="form-control" aria-label="Text input with checkbox" disabled>
               </div>
             </div>
 
