--- a/project/src/main/resources/templates/error.html
+++ b/project/src/main/resources/templates/error.html
@@ -32,7 +32,7 @@
 				<h1>Oops!</h1>
 				<h2>404 - The Page can't be found</h2>
 			</div>
-			<a href="http://localhost:8080/inicio?fragment=painel_admin">Voltar ao Inicio</a>
+			<a href="/inicio?fragment=painel_admin">Voltar ao Inicio</a>
 		</div>
 	</div>
 
