--- a/project/src/main/resources/templates/listar_utilizadores.html
+++ b/project/src/main/resources/templates/listar_utilizadores.html
@@ -15,7 +15,6 @@
                   <th>Username</th>
                   <th>Password</th>
                   <th>Tipo</th>
-                  <th>ID_restaurante</th>
                   <th style="text-align:center;">Ações</th>
                 </tr>
               </thead>
@@ -27,7 +26,7 @@
                   <td th:text="${parametros.username}"></td>
                   <td th:text="${parametros.password}"></td>
                   <td th:text="${parametros.tipo}"></td>
-                  <td th:text="${parametros.id_restaurante}"></td>
+                <!--  <td th:text="${parametros.id_restaurante}"></td> -->
                   <td>
 
                   <table style="width:80%;">
