--- a/project/src/main/resources/templates/error.html
+++ b/project/src/main/resources/templates/error.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-	<title>404 HTML Template by Colorlib</title>
+	<title>Página não encontrada</title>
 
 	<!-- Google font -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:200,400,700" rel="stylesheet">
@@ -30,12 +30,12 @@
 		<div class="notfound">
 			<div class="notfound-404">
 				<h1>Oops!</h1>
-				<h2>404 - The Page can't be found</h2>
+				<h2>404 - Ocorreu um erro</h2>
 			</div>
-			<a href="/inicio?fragment=painel_admin">Voltar ao Inicio</a>
+			<a href="http://localhost:8080/erro_session">Voltar ao Inicio</a>
 		</div>
 	</div>
 
-</body><!-- This templates was made by Colorlib (https://colorlib.com) -->
+</body>
 
 </html>
