--- a/project/src/main/resources/templates/editar_rest.html
+++ b/project/src/main/resources/templates/editar_rest.html
@@ -1,5 +1,16 @@
 <div th:fragment="editar_rest_frag">
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script>
+  $(document).ready(function(){
+      if($("#dia1").val() == ""){
+        $("#dia1").val("0")
+      }else {
+          $("#dia1").val("Monday");
+      }
+  });
+</script>
+
   <div class="section__content section__content--p30">
     <div class="container-fluid">
       <div class="card">
@@ -29,6 +40,68 @@
                 <option value="Sushi">Sushi</option>
                 <option value="Fast-Food">Fast-Food</option>
               </select>
+            </div>
+
+            <div th:each="coisa :${parametros.arDias_Semana}">
+
+            </div>
+
+            <input type="hidden" name="dia1" value="0" id="dia1">
+            <input type="hidden" name="dia2" value="0" id="dia2">
+            <input type="hidden" name="dia3" value="0" id="dia3">
+            <input type="hidden" name="dia4" value="0" id="dia4">
+            <input type="hidden" name="dia5" value="0" id="dia5">
+            <input type="hidden" name="dia6" value="0" id="dia6">
+            <input type="hidden" name="dia7" value="0" id="dia7">
+
+            <div class="form-group">
+              <label for="exampleInputEmail1">Dias funcionais:</label>
+              <div class="input-group-prepend">
+              <input type="checkbox" id="Monday" value="Monday" aria-label="Checkbox for following text input">
+              <input value="Monday" name="Monday" class="form-control" aria-label="Text input with checkbox" disabled>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <div class="input-group-prepend">
+                <input type="checkbox" id="Tuesday" value="Tuesday" aria-label="Checkbox for following text input">
+                <input value="Tuesday" name="Tuesday" class="form-control" aria-label="Text input with checkbox" disabled>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <div class="input-group-prepend">
+                <input type="checkbox" id="Wednesday"  value="Wednesday" aria-label="Checkbox for following text input">
+                <input value="Wednesday" name="Wednesday" class="form-control" aria-label="Text input with checkbox" disabled>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <div class="input-group-prepend">
+                <input type="checkbox" id="Thursday" value="Thursday" aria-label="Checkbox for following text input">
+                <input value="Thursday" name="Thursday" class="form-control" aria-label="Text input with checkbox" disabled>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <div class="input-group-prepend">
+                <input type="checkbox" id="Friday"  value="Friday" aria-label="Checkbox for following text input">
+                <input value="Friday" name="Friday" class="form-control" aria-label="Text input with checkbox" disabled>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <div class="input-group-prepend">
+                <input type="checkbox" id="Saturday" value="Saturday"  aria-label="Checkbox for following text input">
+                <input value="Saturday" name="Saturday" class="form-control" aria-label="Text input with checkbox" disabled>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <div class="input-group-prepend">
+                <input type="checkbox" id="Sunday" value="Sunday" aria-label="Checkbox for following text input">
+                <input value="Sunday" name="Sunday" class="form-control" aria-label="Text input with checkbox" disabled>
+              </div>
             </div>
 
             <div class="form-group"> <label for="exampleTextarea">Descrição</label>
