--- a/project/src/main/resources/templates/login.html
+++ b/project/src/main/resources/templates/login.html
@@ -29,9 +29,30 @@
     <link href="vendor/slick/slick.css" rel="stylesheet" media="all">
     <link href="vendor/select2/select2.min.css" rel="stylesheet" media="all">
     <link href="vendor/perfect-scrollbar/perfect-scrollbar.css" rel="stylesheet" media="all">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
     <!-- Main CSS-->
     <link href="css/theme.css" rel="stylesheet" media="all">
+    <script>
+
+
+    function getUrlVars() {
+  var vars = {};
+  var parts = window.location.href.replace(/[?&]+([^=&]+)=([^&]*)/gi, function(m,key,value) {
+  vars[key] = value;
+  });
+  return vars;
+}
+var ver = getUrlVars()["err"];
+
+if (ver == "fail") {
+  alert("Dados Inválidos !");
+//  $("#staticModal").show();
+
+}
+  //$("#staticModal").show();
+//  document.getElementById("staticModal").style.display = "contents";
+  </script>
 
 </head>
 
@@ -66,6 +87,7 @@
                                     </label>
                                 </div>
                                 <button class="au-btn au-btn--block au-btn--green m-b-20" type="submit">Entrar</button>
+
                                 </form>
 
                                 <!-- <table class="table">
@@ -76,28 +98,11 @@
                                 </tr>
                                 </table>-->
 
-                               <!-- data-toggle="modal" data-target="#staticModal" -->
+                               <!-- data-toggle="modal" data-target="#staticModal"
+                               <button type="button" class="btn btn-secondary mb-1" data-toggle="modal" data-target="#staticModal">
+                                 Static
+                               </button>-->
 
-                                 <div class="modal fade" id="staticModal" tabindex="-1" role="dialog" aria-labelledby="staticModalLabel" aria-hidden="true" data-backdrop="static">
-								<div class="modal-dialog modal-sm" role="document">
-								<div class="modal-content">
-								<div class="modal-header">
-								<h5 class="modal-title" id="staticModalLabel">Informação</h5>
-								<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-									<span aria-hidden="true">&times;</span>
-								</button>
-							</div>
-							<div class="modal-body">
-							<p>
-								  <div th:if="${username == null || password == null}">Por favor introduza dados !</div>
-							</p>
-							</div>
-							<div class="modal-footer">
-								<button type="button" class="btn btn-primary" data-dismiss="modal">Voltar</button>
-							</div>
-						</div>
-					</div>
-				</div>
 
                               <!--   <form action="/registar">
                                 <div class="social-login-content">
@@ -117,6 +122,26 @@
                         </div>
                     </div>
                 </div>
+              <!--  <div class="modal fade" id="staticModal">
+                  <div class="modal-dialog modal-sm" >
+                  <div class="modal-content">
+                  <div class="modal-header">
+                  <h5 class="modal-title" id="staticModalLabel">Informação</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                <p>
+                    <div>Por favor introduza dados !</div>
+                </p>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-primary" data-dismiss="modal">Voltar</button>
+                </div>
+              </div>
+            </div>
+          </div> -->
             </div>
         </div>
 
