--- a/project/src/main/resources/templates/editar_rest.html
+++ b/project/src/main/resources/templates/editar_rest.html
@@ -42,9 +42,9 @@
               </select>
             </div>
 
-            <div th:each="coisa :${parametros.arDias_Semana}">
-
-            </div>
+          <!-- <div th:each="coisa : ${parametros.arDias_Semana}">
+            <input type="text" name="" th:value="${coisa}">
+          </div> -->
 
             <input type="hidden" name="dia1" value="0" id="dia1">
             <input type="hidden" name="dia2" value="0" id="dia2">
