--- a/project/src/main/resources/templates/introduzir_rest.html
+++ b/project/src/main/resources/templates/introduzir_rest.html
@@ -1,5 +1,37 @@
 <div th:fragment="introduzir_rest_frag">
 
+  <link href="css/font-face.css" rel="stylesheet" media="all">
+  <link href="vendor/font-awesome-4.7/css/font-awesome.min.css" rel="stylesheet" media="all">
+  <link href="vendor/font-awesome-5/css/fontawesome-all.min.css" rel="stylesheet" media="all">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">   <!--TRASH-O retirar se der shit ( no delete da lista rest)-->
+  <link href="vendor/mdi-font/css/material-design-iconic-font.min.css" rel="stylesheet" media="all">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+  <!-- Bootstrap CSS-->
+  <link href="vendor/bootstrap-4.1/bootstrap.min.css" rel="stylesheet" media="all">
+
+  <!-- Vendor CSS-->
+  <link href="vendor/animsition/animsition.min.css" rel="stylesheet" media="all">
+  <link href="vendor/bootstrap-progressbar/bootstrap-progressbar-3.3.4.min.css" rel="stylesheet" media="all">
+  <link href="vendor/wow/animate.css" rel="stylesheet" media="all">
+  <link href="vendor/css-hamburgers/hamburgers.min.css" rel="stylesheet" media="all">
+  <link href="vendor/slick/slick.css" rel="stylesheet" media="all">
+  <link href="vendor/select2/select2.min.css" rel="stylesheet" media="all">
+  <link href="vendor/perfect-scrollbar/perfect-scrollbar.css" rel="stylesheet" media="all">
+
+  <!-- Main CSS-->
+  <link href="css/theme.css" rel="stylesheet" media="all">
+
+<script type="text/javascript">
+  $(document).ready(function(){
+  $(function() {
+    $('#datetimepicker3').datetimepicker({
+      pickDate: false
+    });
+  });
+});
+</script>
+
   <div class="section__content section__content--p30">
     <div class="container-fluid">
       <div class="card">
@@ -54,7 +86,24 @@
                 <input type="time" class="form-control" id="pwd">
               </div>
 
+      <!--        <div class="form-group">
+    <div class="input-group date timepicker"
+        data-date-format="HH:mm"
+        data-date-useseconds="false"
+        data-date-pickDate="false">
+
+        <input type="text" name="" />
+        <div class="input-group-addon">
+            <i class="fa fa-clock-o"></i>
+        </div>
+    </div>
+</div> -->
+
             </div>
+
+            <div class="bfh-timepicker">
+</div>
+
             <br>
             <div class="form-group">
               <label for="exampleInputEmail1">Dias funcionais:</label>
